--- a/package.json
+++ b/package.json
@@ -1,22 +1,34 @@
 {
-  "name": "getting-started",
+  "name": "astroblox-team-bot",
   "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
+  "description": "This project contains a basic rock-paper-scissors-style Discord app written in JavaScript, built for the [getting started guide](https://discord.com/developers/docs/getting-started).",
+  "main": "daily_message_bot.js",
   "type": "module",
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js"
+    "start": "node daily_message_bot.js",
+    "dev": "nodemon daily_message_bot.js"
   },
   "author": "Shay DeWael",
   "license": "MIT",
   "dependencies": {
     "discord-interactions": "^3.2.0",
+    "discord.js": "^13.6.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "node-fetch": "^3.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
-  }
+  },
+  "directories": {
+    "example": "examples"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/discord/discord-example-app.git"
+  },
+  "bugs": {
+    "url": "https://github.com/discord/discord-example-app/issues"
+  },
+  "homepage": "https://github.com/discord/discord-example-app#readme"
 }
